--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#포트 번호
 server.port=8080
+
+#Live Reload 기능 활성화
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+
+spring.mvc.view.suffix=.html
